--- a/MlemMlem/MlemMlem/ViewController/SignUpViewController/ConfirmView/ConfirmSignUpViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/SignUpViewController/ConfirmView/ConfirmSignUpViewController.xib
@@ -83,6 +83,9 @@
                                             <real key="value" value="15"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="registerTap:" destination="-1" eventType="touchUpInside" id="pIY-J5-RyK"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nhập mã xác nhận" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4q-H3-Rp5">
                                     <rect key="frame" x="25" y="25" width="161.5" height="22"/>
