--- a/MlemMlem/MlemMlem/ViewController/ ServicePack/ServicePackViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/ ServicePack/ServicePackViewController.xib
@@ -17,12 +17,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ServicePackViewController" customModule="MlemMlem" customModuleProvider="target">
             <connections>
-                <outlet property="img_element" destination="Wmw-Ry-dim" id="PYL-rp-cLI"/>
-                <outlet property="lbl_servicePack" destination="EDg-Fn-vEW" id="2qT-Ry-pLB"/>
                 <outlet property="tableView" destination="o27-vT-1hv" id="NJE-A6-p9S"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="view_background" destination="GM4-2I-aaX" id="dN9-42-4qn"/>
-                <outlet property="view_servicePack" destination="Ejm-Xm-kTf" id="3SJ-IM-RqX"/>
+                <outlet property="view_background" destination="GM4-2I-aaX" id="MEW-wR-PRK"/>
+                <outlet property="view_servicePack" destination="Ejm-Xm-kTf" id="9il-0e-Irm"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -30,33 +28,12 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GM4-2I-aaX">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GM4-2I-aaX" customClass="BackgroundView" customModule="MlemMlem" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_groundElements" translatesAutoresizingMaskIntoConstraints="NO" id="Wmw-Ry-dim">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="200" id="YsV-hI-cuq"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gói dịch vụ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDg-Fn-vEW">
-                            <rect key="frame" x="169.5" y="50" width="75.5" height="17"/>
-                            <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="14"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="Wmw-Ry-dim" secondAttribute="trailing" id="CrA-LG-77I"/>
-                        <constraint firstItem="Wmw-Ry-dim" firstAttribute="top" secondItem="GM4-2I-aaX" secondAttribute="top" id="ZGb-zY-bpt"/>
-                        <constraint firstItem="EDg-Fn-vEW" firstAttribute="centerX" secondItem="GM4-2I-aaX" secondAttribute="centerX" id="gPu-ji-Klb"/>
-                        <constraint firstItem="Wmw-Ry-dim" firstAttribute="leading" secondItem="GM4-2I-aaX" secondAttribute="leading" id="tJ5-hE-EGH"/>
-                        <constraint firstItem="EDg-Fn-vEW" firstAttribute="top" secondItem="GM4-2I-aaX" secondAttribute="top" constant="50" id="z38-kH-FNT"/>
-                    </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ejm-Xm-kTf">
-                    <rect key="frame" x="0.0" y="144" width="414" height="752"/>
+                    <rect key="frame" x="0.0" y="124" width="414" height="772"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vui lòng chọn gói dịch vụ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Cq-WA-Jat">
                             <rect key="frame" x="27" y="25" width="170" height="17"/>
@@ -65,7 +42,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="o27-vT-1hv">
-                            <rect key="frame" x="27" y="42" width="360" height="710"/>
+                            <rect key="frame" x="27" y="42" width="360" height="730"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                     </subviews>
@@ -90,13 +67,12 @@
                 <constraint firstAttribute="bottom" secondItem="Ejm-Xm-kTf" secondAttribute="bottom" id="aXi-po-KPm"/>
                 <constraint firstItem="GM4-2I-aaX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="c4O-Sm-LS5"/>
                 <constraint firstItem="Ejm-Xm-kTf" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="lI2-P9-TSW"/>
-                <constraint firstItem="Ejm-Xm-kTf" firstAttribute="top" secondItem="KlH-tW-6zV" secondAttribute="top" constant="100" id="mDx-kH-R1S"/>
+                <constraint firstItem="Ejm-Xm-kTf" firstAttribute="top" secondItem="KlH-tW-6zV" secondAttribute="top" constant="80" id="mDx-kH-R1S"/>
             </constraints>
             <point key="canvasLocation" x="226" y="54"/>
         </view>
     </objects>
     <resources>
-        <image name="bg_groundElements" width="375" height="215"/>
         <namedColor name="Gray#F4F4F7">
             <color red="0.95686274509803926" green="0.95686274509803926" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
