--- a/MlemMlem/MlemMlem/ViewController/ ServicePack/PopupPaymentSuccess/PopupPaymentSuccessViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/ ServicePack/PopupPaymentSuccess/PopupPaymentSuccessViewController.xib
@@ -17,6 +17,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PopupPaymentSuccessViewController" customModule="MlemMlem" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_backgroundDismiss" destination="blA-1n-SfK" id="ZCW-wD-55g"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,6 +25,10 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="blA-1n-SfK">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cke-Xg-cpY">
                     <rect key="frame" x="30" y="224.5" width="354" height="457"/>
                     <subviews>
@@ -62,6 +67,9 @@
                                     <real key="value" value="25"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="onCreateMenuAction:" destination="-1" eventType="touchUpInside" id="Hw5-Lb-eeW"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thanh toán thành công" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aff-L5-KGb">
                             <rect key="frame" x="75" y="260.5" width="204" height="22"/>
@@ -97,11 +105,15 @@
             <viewLayoutGuide key="safeArea" id="KlH-tW-6zV"/>
             <color key="backgroundColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="blA-1n-SfK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7xU-FO-yiD"/>
+                <constraint firstAttribute="bottom" secondItem="blA-1n-SfK" secondAttribute="bottom" id="9yq-kZ-zmv"/>
                 <constraint firstItem="Cke-Xg-cpY" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" constant="30" id="Ctd-VK-cY6"/>
                 <constraint firstItem="Cke-Xg-cpY" firstAttribute="centerY" secondItem="KlH-tW-6zV" secondAttribute="centerY" id="Pfa-7J-p1q"/>
                 <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="Cke-Xg-cpY" secondAttribute="trailing" constant="30" id="RTG-Xm-smN"/>
+                <constraint firstAttribute="trailing" secondItem="blA-1n-SfK" secondAttribute="trailing" id="SEw-ng-u5M"/>
+                <constraint firstItem="blA-1n-SfK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hZK-uE-WES"/>
             </constraints>
-            <point key="canvasLocation" x="288" y="58"/>
+            <point key="canvasLocation" x="1094" y="84"/>
         </view>
     </objects>
     <resources>
