--- a/MlemMlem/MlemMlem/ViewController/ ServicePack/ServicePackViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/ ServicePack/ServicePackViewController.xib
@@ -42,14 +42,14 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="o27-vT-1hv">
-                            <rect key="frame" x="27" y="42" width="360" height="730"/>
+                            <rect key="frame" x="27" y="67" width="360" height="705"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" name="Gray#F4F4F7"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="o27-vT-1hv" secondAttribute="bottom" id="5oT-Ek-9IN"/>
-                        <constraint firstItem="o27-vT-1hv" firstAttribute="top" secondItem="7Cq-WA-Jat" secondAttribute="bottom" id="Riz-cI-nbm"/>
+                        <constraint firstItem="o27-vT-1hv" firstAttribute="top" secondItem="7Cq-WA-Jat" secondAttribute="bottom" constant="25" id="Riz-cI-nbm"/>
                         <constraint firstAttribute="trailing" secondItem="o27-vT-1hv" secondAttribute="trailing" constant="27" id="Vci-xh-Pem"/>
                         <constraint firstItem="o27-vT-1hv" firstAttribute="leading" secondItem="Ejm-Xm-kTf" secondAttribute="leading" constant="27" id="dra-4t-00c"/>
                         <constraint firstItem="7Cq-WA-Jat" firstAttribute="leading" secondItem="Ejm-Xm-kTf" secondAttribute="leading" constant="27" id="lRm-VW-Qei"/>
